// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches the open sheet with an active doc 1`] = `
<div
  aria-labelledby="radix-_r_*_"
  class="fixed inset-x-0 bottom-0 z-50 flex max-h-[80vh] flex-col rounded-t-2xl bg-paper pb-[env(safe-area-inset-bottom)] shadow-xl md:hidden data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=open]:slide-in-from-bottom data-[state=closed]:slide-out-to-bottom duration-200"
  data-state="open"
  data-testid="mobile-more-sheet"
  id="radix-_r_*_"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <h2
    class="sr-only"
    id="radix-_r_*_"
  >
    More
  </h2>
  <div
    aria-hidden="true"
    class="mx-auto mt-2 h-1 w-9 rounded-full bg-rule"
  />
  <div
    class="px-4 pb-3 pt-4"
  >
    <div
      class="mb-3 last:mb-0"
    >
      <div
        class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
      >
        This doc
      </div>
      <ul
        class="mt-1 flex flex-col"
      >
        <li>
          <button
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-left text-[14px] text-ink hover:bg-paper-2"
            data-testid="mobile-more-inspector"
            type="button"
          >
            Doc inspector
          </button>
        </li>
      </ul>
    </div>
    <div
      class="mb-3 last:mb-0"
    >
      <div
        class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
      >
        This space
      </div>
      <ul
        class="mt-1 flex flex-col"
      >
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/s/s1/settings"
            type="button"
          >
            Space settings
          </a>
        </li>
      </ul>
    </div>
    <div
      class="mb-3 last:mb-0"
    >
      <div
        class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
      >
        App
      </div>
      <ul
        class="mt-1 flex flex-col"
      >
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/settings"
            type="button"
          >
            Universal settings
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/about"
            type="button"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/help"
            type="button"
          >
            Help & shortcuts
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/help/whats-new"
            type="button"
          >
            What's new
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            href="https://github.com/DopaMindLabs/Writer/issues/new"
            rel="noopener noreferrer"
            target="_blank"
            type="button"
          >
            Contact
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`snapshot > matches the space-level sheet with no active doc 1`] = `
<div
  aria-labelledby="radix-_r_*_"
  class="fixed inset-x-0 bottom-0 z-50 flex max-h-[80vh] flex-col rounded-t-2xl bg-paper pb-[env(safe-area-inset-bottom)] shadow-xl md:hidden data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=open]:slide-in-from-bottom data-[state=closed]:slide-out-to-bottom duration-200"
  data-state="open"
  data-testid="mobile-more-sheet"
  id="radix-_r_*_"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <h2
    class="sr-only"
    id="radix-_r_*_"
  >
    More
  </h2>
  <div
    aria-hidden="true"
    class="mx-auto mt-2 h-1 w-9 rounded-full bg-rule"
  />
  <div
    class="px-4 pb-3 pt-4"
  >
    <div
      class="mb-3 last:mb-0"
    >
      <div
        class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
      >
        This space
      </div>
      <ul
        class="mt-1 flex flex-col"
      >
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/s/s1/settings"
            type="button"
          >
            Space settings
          </a>
        </li>
      </ul>
    </div>
    <div
      class="mb-3 last:mb-0"
    >
      <div
        class="font-mono text-[9px] uppercase tracking-wider text-ink-4"
      >
        App
      </div>
      <ul
        class="mt-1 flex flex-col"
      >
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/settings"
            type="button"
          >
            Universal settings
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/about"
            type="button"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/help"
            type="button"
          >
            Help & shortcuts
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            data-discover="true"
            href="/help/whats-new"
            type="button"
          >
            What's new
          </a>
        </li>
        <li>
          <a
            class="flex w-full items-center border-b border-rule/60 px-1 py-3 text-[14px] text-ink hover:bg-paper-2"
            href="https://github.com/DopaMindLabs/Writer/issues/new"
            rel="noopener noreferrer"
            target="_blank"
            type="button"
          >
            Contact
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
